Allow the request result to create the JSON test files for you on the first pass.